--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -166,3 +166,8 @@ col.error {
     src: url('../fonts/entypo.eot'), url('../fonts/entypo.woff'), url('../fonts/entypo.ttf'), url('../fonts/entypo.svg');
 }
 */
+
+
+.cell {
+    padding: 0 20px;
+}
